[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keymatchnet"
version = "0.5.0"
authors = [
  { name="Frederik Hagelskjaer", email="frederikhagel@gmail.com" },
]

description = "A package for the network presented in KeyMatchNet"
keywords = ["deep learning", "zero-shot", "point cloud"]
readme = "README.md"
requires-python = ">=3"
classifiers = [
      "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
include = [
  "keymatchnet/pe_utils.py",
  "keymatchnet/model.py",
  "keymatchnet/kmn_pe_keymatchnet.py",
  "keymatchnet/util.py",
  "keymatchnet/data.py",
]

[project.scripts]
kmncompute = "keymatchnet.kmn_pe_keymatchnet:test"

[project.urls]
"Homepage" = "https://keymatchnet.github.io/"
