[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keymatchnet"
version = "1.0.0"
authors = [
  { name="Frederik Hagelskjaer", email="frederikhagel@gmail.com" },
]

description = "A package for the network presented in KeyMatchNet"
keywords = ["deep learning", "zero-shot", "point cloud"]
readme = "README.md"
classifiers = [
      "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">= 3.9"
dependencies = [
    "numpy >= 1.25, < 2.0",
    "torch >= 2.1.2",
    "open3d >= 0.18.0",
    "trimesh >= 3.18.1",
    "distinctipy >= 1.3.4",
    "h5py >= 3.7.0",
    "transformers",
    ]

[tool.hatch.build]
include = [
  "keymatchnet/pe_utils.py",
  "keymatchnet/model.py",
  "keymatchnet/single_pe_keymatchnet_huggingface.py",
  "keymatchnet/util.py",
  "keymatchnet/data.py",
  "keymatchnet/fps.py",
]

[project.scripts]
keymatchnet = "keymatchnet.single_pe_keymatchnet_huggingface:test"    

[project.urls]
"Homepage" = "https://keymatchnet.github.io/"
